Add Porter's Five Forces and Value Chain pages

--- a/base.html
+++ b/base.html
@@ -296,11 +296,11 @@
             </div>
             
             <div class="pl-4 ml-4 border-l-2 border-emerald-200 dark:border-emerald-900 space-y-2">
-                <a href="#4ps-gtm" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">4Ps GTM Strategy</a>
-                <a href="#swot-analysis" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">SWOT Analysis</a>
+                <a href="184ps.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">4Ps GTM Strategy</a>
+                <a href="14swot.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">SWOT Analysis</a>
                 <a href="62portersfive.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">Porter's Five Forces</a>
                 <a href="64valuechain.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">Value Chain Analysis</a>
-                <a href="#bcg-matrix" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">BCG Matrix; GE-McKinsey Matrix</a>
+                <a href="17bcgmatrix.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">BCG Matrix; GE-McKinsey Matrix</a>
                 <a href="19okrs.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">OKRs</a>
                 <a href="88ansoff.html" class="block text-gray-700 dark:text-gray-300 hover:text-emerald-600 dark:hover:text-emerald-400">Ansoff Matrix</a>
             </div>
