--- a/public/12keyfinancialratios.html
+++ b/public/12keyfinancialratios.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
-<head>
+<!DOCTYPE html><html lang="en" class="scroll-smooth"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dell Strategy Toolkit | Learning Portal</title>
@@ -289,7 +287,7 @@
                             </div>
                             <p class="text-sm mb-2">More stringent liquidity measure that excludes inventory.</p>
                             <div class="text-xs space-y-1">
-                                <p class="mb-0"><strong>Target Range:</strong> > 1.0</p>
+                                <p class="mb-0"><strong>Target Range:</strong> &gt; 1.0</p>
                                 <p class="mb-0"><strong>Dell Recent:</strong> ~0.8</p>
                                 <p class="mb-0"><strong>Tech Industry Avg:</strong> ~1.2</p>
                             </div>
@@ -298,11 +296,11 @@
                         <div class="bg-gray-50 dark:bg-gray-800 p-4 rounded-lg">
                             <h5 class="font-medium mb-2">Cash Ratio</h5>
                             <div class="bg-white dark:bg-gray-900 p-2 rounded border border-gray-200 dark:border-gray-700 mb-2 text-center">
-                                <p class="mb-0 font-medium">Cash & Equivalents ÷ Current Liabilities</p>
+                                <p class="mb-0 font-medium">Cash &amp; Equivalents ÷ Current Liabilities</p>
                             </div>
                             <p class="text-sm mb-2">Most conservative liquidity measure, using only cash and equivalents.</p>
                             <div class="text-xs space-y-1">
-                                <p class="mb-0"><strong>Target Range:</strong> > 0.5</p>
+                                <p class="mb-0"><strong>Target Range:</strong> &gt; 0.5</p>
                                 <p class="mb-0"><strong>Dell Recent:</strong> ~0.3</p>
                                 <p class="mb-0"><strong>Tech Industry Avg:</strong> ~0.7</p>
                             </div>
@@ -537,7 +535,7 @@
                             <div class="text-xs space-y-1">
                                 <p class="mb-0"><strong>Dell Recent:</strong> ~3-4x</p>
                                 <p class="mb-0"><strong>Tech Industry Avg:</strong> ~1-2x</p>
-                                <p class="mb-0"><strong>Target Range:</strong> < 3-4x</p>
+                                <p class="mb-0"><strong>Target Range:</strong> &lt; 3-4x</p>
                             </div>
                         </div>
                         
@@ -550,7 +548,7 @@
                             <div class="text-xs space-y-1">
                                 <p class="mb-0"><strong>Dell Recent:</strong> ~3-4x</p>
                                 <p class="mb-0"><strong>Tech Industry Avg:</strong> ~10-15x</p>
-                                <p class="mb-0"><strong>Target Range:</strong> > 3x</p>
+                                <p class="mb-0"><strong>Target Range:</strong> &gt; 3x</p>
                             </div>
                         </div>
                     </div>
@@ -639,9 +637,9 @@
                         </div>
                         
                         <div class="bg-gray-50 dark:bg-gray-800 p-4 rounded-lg">
-                            <h5 class="font-medium mb-2">R&D as % of Revenue</h5>
+                            <h5 class="font-medium mb-2">R&amp;D as % of Revenue</h5>
                             <div class="bg-white dark:bg-gray-900 p-2 rounded border border-gray-200 dark:border-gray-700 mb-2 text-center">
-                                <p class="mb-0 font-medium">R&D Expense ÷ Total Revenue</p>
+                                <p class="mb-0 font-medium">R&amp;D Expense ÷ Total Revenue</p>
                             </div>
                             <p class="text-sm mb-2">Measures investment in innovation relative to revenue.</p>
                             <div class="text-xs space-y-1">
@@ -792,7 +790,7 @@
                                     <i class="ri-article-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Financial Ratios Guide & Cheat Sheet</h5>
+                                    <h5 class="font-medium text-sm mb-1">Financial Ratios Guide &amp; Cheat Sheet</h5>
                                     <p class="text-xs text-gray-500 dark:text-gray-400">CFI • 15 min read</p>
                                 </div>
                             </div>
@@ -942,5 +940,8 @@
             });
         });
     </script>
-</body>
-</html>
+
+
+
+    <script src="/topic-navigation.js"></script>
+</body></html>
