--- a/public/23scenarioanalysis.html
+++ b/public/23scenarioanalysis.html
@@ -1572,14 +1572,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://sloanreview.mit.edu/article/planning-for-the-future-in-times-of-extreme-uncertainty/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.investopedia.com/terms/s/scenario_analysis.asp" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-red-100 dark:bg-red-900/30 flex items-center justify-center text-red-600 dark:text-red-400 flex-shrink-0">
                                     <i class="ri-book-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Planning in Uncertainty</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">MIT Sloan Management Review • Modern Approaches</p>
+                                    <h5 class="font-medium text-sm mb-1">Scenario Analysis: How It Works and Examples</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Investopedia</p>
                                 </div>
                             </div>
                         </a>
