--- a/public/58rootcauseanalysis.html
+++ b/public/58rootcauseanalysis.html
@@ -1318,14 +1318,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.mindtools.com/pages/article/newTMC_5W.htm" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://online.hbs.edu/blog/post/root-cause-analysis" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0">
                                     <i class="ri-question-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">5 Whys Technique</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">MindTools • Practical implementation guide</p>
+                                    <h5 class="font-medium text-sm mb-1">Root Cause Analysis</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">HBS</p>
                                 </div>
                             </div>
                         </a>
