--- a/public/11financialreports.html
+++ b/public/11financialreports.html
@@ -642,14 +642,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.youtube.com/playlist?list=PLbssOJyyvHuWiBQAg5REGNQ8Qjs-BHmDQ" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.investing.com/equities/dell-inc-ratios" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-red-100 dark:bg-red-900/30 flex items-center justify-center text-red-600 dark:text-red-400 flex-shrink-0">
                                     <i class="ri-video-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Dell Financial Analyst Briefings</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Video presentations from Dell's executive team</p>
+                                    <h5 class="font-medium text-sm mb-1">Dell Technologies Investor Relations</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Investing.com</p>
                                 </div>
                             </div>
                         </a>
