--- a/public/22decisiontrees.html
+++ b/public/22decisiontrees.html
@@ -1129,14 +1129,14 @@
                     
                     <h4>Curated Resources</h4>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
-                        <a href="https://www.mindtools.com/ab3rsyn/decision-tree-analysis" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://venngage.com/blog/decision-tree-analysis-example/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-blue-100 dark:bg-blue-900/30 flex items-center justify-center text-blue-600 dark:text-blue-400 flex-shrink-0">
                                     <i class="ri-article-line"></i>
                                 </div>
                                 <div>
                                     <h5 class="font-medium text-sm mb-1">Decision Tree Analysis</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">MindTools • Comprehensive Guide</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Venngage</p>
                                 </div>
                             </div>
                         </a>
