to value chain analysis

--- a/public/62portersfive.html
+++ b/public/62portersfive.html
@@ -1801,20 +1801,20 @@
                                     <i class="ri-book-read-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Institute for Strategy &amp; Competitiveness</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Harvard Business School • Comprehensive guide to Five Forces</p>
+                                    <h5 class="font-medium text-sm mb-1">Porter's Five Forces</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Harvard Business School</p>
                                 </div>
                             </div>
                         </a>
                         
-                        <a href="https://www.mckinsey.com/business-functions/strategy-and-corporate-finance/our-insights/enduring-ideas-the-industry-structure-framework" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.forbes.com/advisor/business/porters-five-forces/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-purple-100 dark:bg-purple-900/30 flex items-center justify-center text-purple-600 dark:text-purple-400 flex-shrink-0">
                                     <i class="ri-focus-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Industry Structure Framework</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">McKinsey &amp; Company • Practical application of Five Forces</p>
+                                    <h5 class="font-medium text-sm mb-1">Porter's Five Forces</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Forbes</p>
                                 </div>
                             </div>
                         </a>
