--- a/12keyfinancialratios.html
+++ b/12keyfinancialratios.html
@@ -774,14 +774,14 @@
                     
                     <h4>Curated Resources</h4>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
-                        <a href="https://www.youtube.com/watch?v=9EpYjbl-tx8" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.youtube.com/watch?v=3W_LwpeG8c8&ab_channel=AccountingStuff" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-red-100 dark:bg-red-900/30 flex items-center justify-center text-red-600 dark:text-red-400 flex-shrink-0">
                                     <i class="ri-video-line"></i>
                                 </div>
                                 <div>
                                     <h5 class="font-medium text-sm mb-1">Financial Ratio Analysis Explained</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">YouTube • 24:38</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">YouTube • 23:56</p>
                                 </div>
                             </div>
                         </a>
@@ -798,14 +798,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.wallstreetprep.com/knowledge/financial-ratios/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.business.qld.gov.au/running-business/finance/improve-performance/ratios/infographic-transcript?utm_source" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0">
                                     <i class="ri-file-list-3-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Financial Ratios: The Complete List for Analysis</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Wall Street Prep • 20 min read</p>
+                                    <h5 class="font-medium text-sm mb-1">Financial Ratios</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">QLD Government</p>
                                 </div>
                             </div>
                         </a>
