--- a/public/64valuechain.html
+++ b/public/64valuechain.html
@@ -1750,14 +1750,15 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.bcg.com/publications/2021/transformative-power-of-digital-supply-chain" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.investopedia.com/terms/v/valuechain.asp" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-purple-100 dark:bg-purple-900/30 flex items-center justify-center text-purple-600 dark:text-purple-400 flex-shrink-0">
                                     <i class="ri-link-m"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">The Transformative Power of the Digital Supply Chain</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Boston Consulting Group • Digital value chain transformation</p>
+                                    <h5 class="font-medium text-sm mb-1">Value Chain</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Investopedia</p>
                                 </div>
                             </div>
                         </a>
