--- a/public/17bcgmatrix.html
+++ b/public/17bcgmatrix.html
@@ -1374,14 +1374,14 @@
                     
                     <h4>Curated Resources</h4>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
-                        <a href="https://www.youtube.com/watch?v=t4gtv_5eDYg" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.youtube.com/watch?v=yulWLHRdNVQ&t=415s&ab_channel=BusinessSchool101" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-red-100 dark:bg-red-900/30 flex items-center justify-center text-red-600 dark:text-red-400 flex-shrink-0">
                                     <i class="ri-video-line"></i>
                                 </div>
                                 <div>
                                     <h5 class="font-medium text-sm mb-1">BCG &amp; GE-McKinsey Matrix Comparison</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">YouTube • 15:26</p>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">YouTube • 8:35</p>
                                 </div>
                             </div>
                         </a>
@@ -1398,14 +1398,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.mckinsey.com/industries/financial-services/our-insights/the-mckinsey-ge-matrix-revisited" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.bcg.com/about/overview/our-history/growth-share-matrix" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0">
                                     <i class="ri-article-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">The McKinsey-GE Matrix Revisited</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">McKinsey &amp; Company • Research Article</p>
+                                    <h5 class="font-medium text-sm mb-1">Growth Share Matrix</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">BCG</p>
                                 </div>
                             </div>
                         </a>
