--- a/public/19okrs.html
+++ b/public/19okrs.html
@@ -1048,14 +1048,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://felipecastro.com/en/okr/what-is-okr/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.perdoo.com/resources/online-guides/okr-guide" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-blue-100 dark:bg-blue-900/30 flex items-center justify-center text-blue-600 dark:text-blue-400 flex-shrink-0">
                                     <i class="ri-article-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">OKR Guide: All You Need to Know</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Felipe Castro • Interactive Guide</p>
+                                    <h5 class="font-medium text-sm mb-1">OKR Guide</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Perdoo</p>
                                 </div>
                             </div>
                         </a>
