fixed curated resources

--- a/public/32rapids.html
+++ b/public/32rapids.html
@@ -1387,14 +1387,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.delltechnologies.com/en-us/blog/accelerating-decision-making-for-better-business-outcomes/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.bain.com/insights/rapid-decision-making/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-purple-100 dark:bg-purple-900/30 flex items-center justify-center text-purple-600 dark:text-purple-400 flex-shrink-0">
                                     <i class="ri-book-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Accelerating Decision-Making for Better Business Outcomes</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Dell Technologies • Decision Effectiveness in Digital Transformation</p>
+                                    <h5 class="font-medium text-sm mb-1">Rapid Decision-Making</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Bain & Company</p>
                                 </div>
                             </div>
                         </a>
