--- a/public/40toolsganttsraci.html
+++ b/public/40toolsganttsraci.html
@@ -1712,14 +1712,14 @@
                     
                     <h4>Curated Resources</h4>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
-                        <a href="https://www.pmi.org/learning/library/gantt-chart-tool-planning-projects-1659" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.investopedia.com/terms/g/gantt-chart.asp" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-blue-100 dark:bg-blue-900/30 flex items-center justify-center text-blue-600 dark:text-blue-400 flex-shrink-0">
                                     <i class="ri-bar-chart-horizontal-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Gantt Charts: Planning and Scheduling Team Projects</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">PMI • Best Practices in Schedule Management</p>
+                                    <h5 class="font-medium text-sm mb-1">Gantt Charts</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Investopedia</p>
                                 </div>
                             </div>
                         </a>
@@ -1736,14 +1736,14 @@
                             </div>
                         </a>
                         
-                        <a href="https://www.scrum.org/resources" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.bain.com/insights/management-tools-agile-management/" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-purple-100 dark:bg-purple-900/30 flex items-center justify-center text-purple-600 dark:text-purple-400 flex-shrink-0">
                                     <i class="ri-loop-left-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">Scrum.org Resources</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Scrum.org • Agile and Scrum Learning Resources</p>
+                                    <h5 class="font-medium text-sm mb-1">Management Tools for Agile Management</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">Bain & Company</p>
                                 </div>
                             </div>
                         </a>
