--- a/public/44fundamentalssupplychainmanag.html
+++ b/public/44fundamentalssupplychainmanag.html
@@ -1511,14 +1511,14 @@
                     
                     <h4>Curated Resources</h4>
                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
-                        <a href="https://scm.ncsu.edu/scm-articles" target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
+                        <a href="https://www.mckinsey.com/capabilities/operations/how-we-help-clients/manufacturing-supply-chain    " target="_blank" class="block bg-gray-50 dark:bg-gray-800 p-4 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700">
                             <div class="flex items-start gap-3">
                                 <div class="w-10 h-10 rounded-full bg-blue-100 dark:bg-blue-900/30 flex items-center justify-center text-blue-600 dark:text-blue-400 flex-shrink-0">
                                     <i class="ri-article-line"></i>
                                 </div>
                                 <div>
-                                    <h5 class="font-medium text-sm mb-1">NC State SCRC Knowledge Articles</h5>
-                                    <p class="text-xs text-gray-500 dark:text-gray-400">Supply Chain Resource Cooperative • Research-based articles on supply chain trends and best practices</p>
+                                    <h5 class="font-medium text-sm mb-1">Manufacturing Supply Chain</h5>
+                                    <p class="text-xs text-gray-500 dark:text-gray-400">McKinsey & Company</p>
                                 </div>
                             </div>
                         </a>
