--- a/public/19okrs.html
+++ b/public/19okrs.html
@@ -74,15 +74,9 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Learning Paths</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#strategy-toolkit" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
+                            <a href="index.html" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
                                 <i class="ri-dashboard-line"></i>
                                 <span>Strategy Toolkit</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#dell-101" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
-                                <i class="ri-building-line"></i>
-                                <span>Dell 101</span>
                             </a>
                         </li>
                     </ul>
