org behavior side bar

--- a/public/34processengineering.html
+++ b/public/34processengineering.html
@@ -74,15 +74,9 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Learning Paths</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#strategy-toolkit" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
+                            <a href="index.html" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
                                 <i class="ri-dashboard-line"></i>
                                 <span>Strategy Toolkit</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#dell-101" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
-                                <i class="ri-building-line"></i>
-                                <span>Dell 101</span>
                             </a>
                         </li>
                     </ul>
@@ -92,43 +86,43 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Modules</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#problem-solving" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="21mece.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-mind-map"></i>
                                 <span>Structured Problem Solving</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#financial-acumen" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="11financialreports.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-line-chart-line"></i>
                                 <span>Financial Acumen</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#frameworks" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="14swot.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-layout-grid-line"></i>
                                 <span>Strategic Frameworks</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#org-behavior" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 text-primary">
+                            <a href="31raci.html" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
                                 <i class="ri-team-line"></i>
                                 <span>Organizational Behavior</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#product-ops" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="44fundamentalssupplychainmanag.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-settings-line"></i>
-                                <span>Product &amp; Ops Foundations</span>
+                                <span>Product & Ops Foundations</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#project-management" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="38workplan.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-task-line"></i>
-                                <span>Project Management</span>
+                                <span>Project Management Essentials</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#effective-communication" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="41buildingcompelling.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-chat-4-line"></i>
                                 <span>Effective Communication</span>
                             </a>
@@ -140,33 +134,33 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Organizational Behavior</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="/31raci" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 topic-link">
-                                <span class="w-5 h-5 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0 text-xs">✓</span>
-                                <span>RACI Framework</span>
+                            <a href="31raci.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                                <span class="w-5 h-5 rounded-full bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 flex-shrink-0 text-xs">○</span>
+                                <span>RACI</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/32rapids" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 topic-link">
-                                <span class="w-5 h-5 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0 text-xs">✓</span>
-                                <span>RAPIDs Framework</span>
+                            <a href="32rapids.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                                <span class="w-5 h-5 rounded-full bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 flex-shrink-0 text-xs">○</span>
+                                <span>RAPIDs</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/33processmaps" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 topic-link">
-                                <span class="w-5 h-5 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0 text-xs">✓</span>
+                            <a href="33processmaps.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                                <span class="w-5 h-5 rounded-full bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 flex-shrink-0 text-xs">○</span>
                                 <span>Process Maps</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/34processengineering" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 bg-primary/10 dark:bg-primary/20 topic-link">
+                            <a href="34processengineering.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <span class="w-5 h-5 rounded-full bg-blue-100 dark:bg-blue-900/30 flex items-center justify-center text-blue-600 dark:text-blue-400 flex-shrink-0 text-xs">○</span>
                                 <span>Process Reengineering</span>
                             </a>
                         </li>
                         <li>
-                            <a href="/35kotter" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 topic-link">
+                            <a href="35kotter.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <span class="w-5 h-5 rounded-full bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 flex-shrink-0 text-xs">○</span>
-                                <span>Kotter's Change Management</span>
+                                <span>Kotter's 8-Step Change Management</span>
                             </a>
                         </li>
                     </ul>
