--- a/public/43deliveringfeedback.html
+++ b/public/43deliveringfeedback.html
@@ -74,15 +74,9 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Learning Paths</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#strategy-toolkit" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
+                            <a href="index.html" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
                                 <i class="ri-dashboard-line"></i>
                                 <span>Strategy Toolkit</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#dell-101" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
-                                <i class="ri-building-line"></i>
-                                <span>Dell 101</span>
                             </a>
                         </li>
                     </ul>
@@ -92,43 +86,43 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Modules</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#problem-solving" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="21mece.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-mind-map"></i>
                                 <span>Structured Problem Solving</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#financial-acumen" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="11financialreports.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-line-chart-line"></i>
                                 <span>Financial Acumen</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#frameworks" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="14swot.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-layout-grid-line"></i>
                                 <span>Strategic Frameworks</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#org-behavior" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="31raci.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-team-line"></i>
                                 <span>Organizational Behavior</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#product-ops" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="44fundamentalssupplychainmanag.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-settings-line"></i>
-                                <span>Product &amp; Ops Foundations</span>
+                                <span>Product & Ops Foundations</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#project-management" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                            <a href="38workplan.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <i class="ri-task-line"></i>
                                 <span>Project Management Essentials</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#effective-communication" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 text-primary">
+                            <a href="41buildingcompelling.html" class="flex items-center gap-2 px-3 py-2 rounded-lg bg-primary/10 text-primary dark:bg-primary/20">
                                 <i class="ri-chat-4-line"></i>
                                 <span>Effective Communication</span>
                             </a>
@@ -140,21 +134,21 @@
                     <h3 class="text-xs uppercase font-semibold text-gray-500 dark:text-gray-400 mb-2">Effective Communication</h3>
                     <ul class="space-y-1">
                         <li>
-                            <a href="#" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 topic-link" data-topic="topic-executive-summaries">
-                                <span class="w-5 h-5 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0 text-xs">✓</span>
-                                <span>Executive Summaries &amp; Presentations</span>
+                            <a href="41buildingcompelling.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                                <span class="w-5 h-5 rounded-full bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 flex-shrink-0 text-xs">○</span>
+                                <span>Building Executive Summaries</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 topic-link" data-topic="topic-business-storytelling">
-                                <span class="w-5 h-5 rounded-full bg-green-100 dark:bg-green-900/30 flex items-center justify-center text-green-600 dark:text-green-400 flex-shrink-0 text-xs">✓</span>
+                            <a href="42storytellingbusiness.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
+                                <span class="w-5 h-5 rounded-full bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 flex-shrink-0 text-xs">○</span>
                                 <span>Storytelling in Business</span>
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800 bg-primary/10 dark:bg-primary/20 topic-link" data-topic="topic-feedback-managing-up">
+                            <a href="43deliveringfeedback.html" class="flex items-center gap-2 px-3 py-2 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-800">
                                 <span class="w-5 h-5 rounded-full bg-blue-100 dark:bg-blue-900/30 flex items-center justify-center text-blue-600 dark:text-blue-400 flex-shrink-0 text-xs">○</span>
-                                <span>Delivering Feedback &amp; Managing Up</span>
+                                <span>Delivering Feedback & Managing Up</span>
                             </a>
                         </li>
                     </ul>
